--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/clipboardImg.svg" />
     <!-- <link rel="icon" type="image/svg+xml" href="/smileyface.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Student Roster</title>
   </head>
   <body>
     <div id="root"></div>
